--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_core: ^1.17.0
   firebase_auth: ^3.3.18
   cloud_firestore: ^3.1.15
+  modal_progress_hud_nsn: ^0.1.0-nullsafety-1
 
 
   # The following adds the Cupertino Icons font to your application.
